--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "inquirer": "^3.0.6",
     "sharp": "^0.17.3"
   },
+  "bin": {
+    "batch-crop": "index.js"
+  },
   "devDependencies": {
     "chai": "3.5.0",
     "mocha": "3.3.0"
